# appRepo

./: .gitignore  Dockerfile  README.md  app.py  main.py  requirements.txt
.gemini/: logs.json
.github/workflows/: backend-publish.yml  docker-image.yml  generator-publish.yml  main.yml  test.yml
backend/: Dockerfile  cloudbuild.yaml  database.py  main.py  pyproject.toml
backend/.gemini/: logs.json
frontend/: main.py  pyproject.toml
generator/: Dockerfile  README.md  cloudbuild-generator.yaml  locustfile.py  pyproject.toml
